--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
   </nav>
 </header>
 
-<!-- HERO -->
 <section class="page-hero">
   <img class="page-hero-img" src="images/about-hero.png" alt="About hero">
   <div class="page-hero-overlay"></div>
@@ -30,45 +29,33 @@
     <h1 class="page-title">A Modern Brand Built on Detail</h1>
     <p class="page-sub">
       Style & Trend is a contemporary fashion label based in Istanbul. We blend clean silhouettes
-      with street energy—designed for daily wear, elevated with premium feel, and finished with
-      small details that make the difference.
+      with street energy—designed for daily wear, elevated with premium feel, finished with precise details.
     </p>
   </div>
 </section>
 
-<!-- INTRO SPLIT -->
 <section class="section">
   <div class="split">
     <div>
       <h2 class="section-title">Our Story</h2>
       <p class="text">
-        Style & Trend was founded in 2026 with one simple goal: create pieces that look effortless
-        and feel premium—without making fashion complicated. We wanted essentials that stay sharp,
-        layers that work across seasons, and silhouettes that feel current without being “too trendy”.
+        Founded in 2026, Style & Trend started with a simple goal: create wardrobe pieces that feel premium,
+        look effortless, and stay relevant across seasons. We believe great style is not loud — it’s clean,
+        confident, and consistent.
       </p>
       <p class="text">
-        Our aesthetic is minimal and modern. Think clean colors, structured comfort, and wearable shapes
-        that fit your lifestyle—work, weekends, nights out. If you like a wardrobe that always looks “put together”,
-        you’re in the right place.
+        We design essentials that work every day, outerwear that defines the silhouette, and sneakers that finish the look.
+        Our collections are intentionally focused: fewer pieces, stronger design decisions, better fit.
       </p>
       <p class="text">
-        We build collections in focused drops instead of overwhelming catalogs. That keeps the brand curated and
-        allows more attention to fit, fabric, stitching, and finishing. We’d rather do fewer pieces better.
+        We build every drop with a clear direction — fabrics, textures, and shapes that match the brand identity.
+        This keeps everything cohesive: you can mix pieces easily and always look “put together”.
       </p>
 
       <div class="stats">
-        <div class="stat">
-          <div class="stat-num">2026</div>
-          <div class="stat-label">Founded</div>
-        </div>
-        <div class="stat">
-          <div class="stat-num">3</div>
-          <div class="stat-label">Core Lines</div>
-        </div>
-        <div class="stat">
-          <div class="stat-num">Istanbul</div>
-          <div class="stat-label">Design Base</div>
-        </div>
+        <div class="stat"><div class="stat-num">2026</div><div class="stat-label">Founded</div></div>
+        <div class="stat"><div class="stat-num">3</div><div class="stat-label">Core Lines</div></div>
+        <div class="stat"><div class="stat-num">Istanbul</div><div class="stat-label">Design Base</div></div>
       </div>
     </div>
 
@@ -82,7 +69,6 @@
   </div>
 </section>
 
-<!-- VALUES -->
 <section class="section soft">
   <div class="section-head">
     <h2 class="section-title">What We Stand For</h2>
@@ -90,26 +76,13 @@
   </div>
 
   <div class="card-grid">
-    <div class="card">
-      <h3>Quality First</h3>
-      <p>We focus on fabric, stitching, and durability—pieces you can wear often and keep longer.</p>
-    </div>
-    <div class="card">
-      <h3>Clean Design</h3>
-      <p>Minimal palettes, strong silhouettes, refined details. Timeless > trendy.</p>
-    </div>
-    <div class="card">
-      <h3>Comfort + Shape</h3>
-      <p>Comfort isn’t optional. We balance structure and movement so fits feel natural.</p>
-    </div>
-    <div class="card">
-      <h3>Responsible Choices</h3>
-      <p>We prefer controlled runs and thoughtful sourcing to reduce unnecessary waste.</p>
-    </div>
+    <div class="card"><h3>Quality First</h3><p>Better fabric, better stitching, better finishing. Pieces built to last.</p></div>
+    <div class="card"><h3>Clean Design</h3><p>Minimal palettes, strong silhouettes, refined details — timeless > trendy.</p></div>
+    <div class="card"><h3>Comfort + Shape</h3><p>Comfort isn’t optional. We balance structure and movement.</p></div>
+    <div class="card"><h3>Responsible Choices</h3><p>Controlled runs and thoughtful sourcing to reduce waste.</p></div>
   </div>
 </section>
 
-<!-- PROCESS -->
 <section class="section">
   <div class="section-head">
     <h2 class="section-title">How We Build a Collection</h2>
@@ -117,38 +90,13 @@
   </div>
 
   <div class="steps">
-    <div class="step">
-      <div class="step-badge">01</div>
-      <div>
-        <h3>Direction</h3>
-        <p>We define a season mood: colors, fabrics, shapes, and key pieces that fit our identity.</p>
-      </div>
-    </div>
-    <div class="step">
-      <div class="step-badge">02</div>
-      <div>
-        <h3>Sampling</h3>
-        <p>Prototype, test fit, refine seams, adjust details—repeat until it feels “right”.</p>
-      </div>
-    </div>
-    <div class="step">
-      <div class="step-badge">03</div>
-      <div>
-        <h3>Production</h3>
-        <p>Controlled runs with consistent finishing and quality checks.</p>
-      </div>
-    </div>
-    <div class="step">
-      <div class="step-badge">04</div>
-      <div>
-        <h3>Drop</h3>
-        <p>Focused releases, curated selection—less noise, stronger wardrobe building.</p>
-      </div>
-    </div>
+    <div class="step"><div class="step-badge">01</div><div><h3>Direction</h3><p>We set mood, color, fabric and silhouette guidelines for a cohesive drop.</p></div></div>
+    <div class="step"><div class="step-badge">02</div><div><h3>Sampling</h3><p>Prototypes, fit tests, seam refinement, and detail tuning until perfect.</p></div></div>
+    <div class="step"><div class="step-badge">03</div><div><h3>Production</h3><p>Consistent finishing and quality checks across controlled runs.</p></div></div>
+    <div class="step"><div class="step-badge">04</div><div><h3>Drop</h3><p>Focused releases — fewer pieces, stronger wardrobe building.</p></div></div>
   </div>
 </section>
 
-<!-- TIMELINE + IMAGE -->
 <section class="section soft">
   <div class="split">
     <div class="img-card">
@@ -162,27 +110,9 @@
     <div>
       <h2 class="section-title">Timeline</h2>
       <div class="timeline">
-        <div class="tl-item">
-          <div class="tl-dot"></div>
-          <div class="tl-content">
-            <div class="tl-year">2026</div>
-            <div class="tl-text">Brand launch — essentials and clean street layers.</div>
-          </div>
-        </div>
-        <div class="tl-item">
-          <div class="tl-dot"></div>
-          <div class="tl-content">
-            <div class="tl-year">2027</div>
-            <div class="tl-text">Season capsules + improved tailoring and fabric options.</div>
-          </div>
-        </div>
-        <div class="tl-item">
-          <div class="tl-dot"></div>
-          <div class="tl-content">
-            <div class="tl-year">Next</div>
-            <div class="tl-text">More refined drops, stronger sustainability, expanded fits.</div>
-          </div>
-        </div>
+        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">2026</div><div class="tl-text">Brand launch — essentials and clean street layers.</div></div></div>
+        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">2027</div><div class="tl-text">Season capsules + improved tailoring and fabric options.</div></div></div>
+        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">Next</div><div class="tl-text">More refined drops, stronger sustainability, expanded fits.</div></div></div>
       </div>
 
       <div class="mini-cta">
@@ -193,7 +123,6 @@
   </div>
 </section>
 
-<!-- FAQ -->
 <section class="section">
   <div class="section-head">
     <h2 class="section-title">FAQ</h2>
@@ -201,18 +130,9 @@
   </div>
 
   <div class="faq">
-    <details>
-      <summary>Where are you based?</summary>
-      <p>We’re based in Istanbul, Turkey. We design here and work with trusted production partners.</p>
-    </details>
-    <details>
-      <summary>What style is Style & Trend?</summary>
-      <p>Modern minimalism with street influence: clean silhouettes, wearable layers, premium feel.</p>
-    </details>
-    <details>
-      <summary>Do you do limited drops?</summary>
-      <p>Yes. We prefer focused releases rather than massive collections, so each drop stays curated.</p>
-    </details>
+    <details><summary>Where are you based?</summary><p>We’re based in Istanbul, Turkey. We design here and work with trusted production partners.</p></details>
+    <details><summary>What style is Style & Trend?</summary><p>Modern minimalism with street influence: clean silhouettes, wearable layers, premium feel.</p></details>
+    <details><summary>Do you do limited drops?</summary><p>Yes. We prefer focused releases rather than massive collections.</p></details>
   </div>
 </section>
 
