--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,16 @@
   </nav>
 </header>
 
-<!-- HERO -->
 <section class="page-hero compact">
-  <img class="page-hero-img" src="images/contact-hero.png" alt="Contact hero background">
+  <img class="page-hero-img" src="images/contact-hero.png" alt="Contact hero">
   <div class="page-hero-overlay light"></div>
   <div class="page-hero-copy dark">
     <p class="kicker">CONTACT</p>
     <h1 class="page-title">Let’s Talk</h1>
-    <p class="page-sub">
-      Questions about sizing, shipping, collaborations, or press? Send a message and we’ll get back to you.
-    </p>
+    <p class="page-sub">Questions about sizing, shipping, collaborations, or press? Send a message.</p>
   </div>
 </section>
 
-<!-- CONTACT CARDS -->
 <section class="section">
   <div class="contact-grid">
     <div class="card">
@@ -50,15 +46,14 @@
       <p class="muted">Mon–Fri · 10:00–18:00</p>
     </div>
     <div class="card">
-      <h3>Social</h3>
-      <p class="muted">Instagram</p>
-      <p><strong>@styletrend</strong></p>
-      <p class="muted">DM for quick questions</p>
+      <h3>Business</h3>
+      <p class="muted">Press / Wholesale</p>
+      <p><strong>biz@styletrend.com</strong></p>
+      <p class="muted">We review weekly</p>
     </div>
   </div>
 </section>
 
-<!-- FORM + MAP -->
 <section class="section soft">
   <div class="split">
     <div class="card form-card">
@@ -107,7 +102,6 @@
   </div>
 </section>
 
-<!-- FAQ -->
 <section class="section">
   <div class="section-head">
     <h2 class="section-title">Contact FAQ</h2>
@@ -115,18 +109,9 @@
   </div>
 
   <div class="faq">
-    <details>
-      <summary>Do you ship internationally?</summary>
-      <p>Yes. Add items to cart and proceed to checkout to see available destinations.</p>
-    </details>
-    <details>
-      <summary>How do I choose the right size?</summary>
-      <p>Message us with your height/weight and preferred fit (regular/oversized). We’ll guide you.</p>
-    </details>
-    <details>
-      <summary>Collaboration / influencer requests?</summary>
-      <p>Send details in the form (links + audience + concept). We review weekly.</p>
-    </details>
+    <details><summary>Do you ship internationally?</summary><p>Yes. Add items to cart and proceed to checkout to see available destinations.</p></details>
+    <details><summary>How do I choose the right size?</summary><p>Message us with your height/weight and preferred fit (regular/oversized). We’ll guide you.</p></details>
+    <details><summary>Collaboration / influencer requests?</summary><p>Send links + audience + concept. We review weekly.</p></details>
   </div>
 </section>
 
