--- a/index.html
+++ b/index.html
@@ -12,138 +12,104 @@
 <body>
 
 <header class="nav">
-  <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
-  <nav class="menu">
-    <a href="index.html" class="active">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <div class="nav-inner">
+    <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
+    <nav class="menu">
+      <a href="index.html" class="active">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section class="hero-zara">
-  <img class="hero-img" src="images/hero.jpg" alt="Style & Trend hero">
-  <div class="hero-overlay"></div>
+<section class="hero">
+  <div class="hero-inner">
+    <div>
+      <h1>Modern Fashion</h1>
+      <p>Streetwear • Luxury • Casual — clean, wearable and premium-feel pieces.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="products.html">Shop Now</a>
+        <a class="btn btn-light" href="about.html">Our Story</a>
+      </div>
+    </div>
 
-  <div class="hero-copy">
-    <p class="hero-eyebrow">NEW SEASON 2026</p>
-    <h1 class="hero-title">THE EDIT</h1>
-    <p class="hero-sub">Modern silhouettes. Clean lines. Everyday luxury.</p>
-    <div class="hero-actions">
-      <a class="btn btn-primary" href="products.html">SHOP NEW IN</a>
-      <a class="btn btn-ghost" href="#categories">EXPLORE STYLES</a>
+    <div class="hero-media">
+      <img src="images/hero.jpg" alt="Hero image">
     </div>
   </div>
 </section>
 
-<section class="strip">
-  <div class="strip-inner">
-    <span>FREE SHIPPING OVER $150</span><span>•</span>
-    <span>LIMITED DROPS</span><span>•</span>
-    <span>DESIGNED IN ISTANBUL</span><span>•</span>
-    <span>PREMIUM FABRICS</span>
-  </div>
-</section>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">Shop by Style</h2>
+    <p class="section-sub">Pick your vibe and discover matching pieces.</p>
 
-<section id="categories" class="section">
-  <div class="section-head">
-    <h2 class="section-title">SHOP BY STYLE</h2>
-    <a class="section-link" href="products.html">View all</a>
-  </div>
-
-  <div class="cat-grid">
-    <a class="cat-card" href="products.html" aria-label="Streetwear">
-      <img src="images/streetwear.jpg" alt="Streetwear">
-      <div class="cat-grad"></div>
-      <div class="cat-text">
-        <span class="cat-kicker">01</span>
-        <h3>Streetwear</h3>
-        <span class="cat-cta">Explore</span>
+    <div class="grid-3">
+      <div class="card">
+        <div class="cat-img"><img src="images/streetwear.jpg" alt="Streetwear"></div>
+        <div class="card-body">
+          <h3>Streetwear</h3>
+          <p>Bold layers, relaxed fits and everyday street energy.</p>
+          <a class="btn btn-primary" href="products.html">Explore</a>
+        </div>
       </div>
-    </a>
 
-    <a class="cat-card" href="products.html" aria-label="Luxury">
-      <img src="images/luxury.jpg" alt="Luxury">
-      <div class="cat-grad"></div>
-      <div class="cat-text">
-        <span class="cat-kicker">02</span>
-        <h3>Luxury</h3>
-        <span class="cat-cta">Explore</span>
+      <div class="card">
+        <div class="cat-img"><img src="images/luxury.jpg" alt="Luxury"></div>
+        <div class="card-body">
+          <h3>Luxury</h3>
+          <p>Premium-feel essentials and refined outerwear.</p>
+          <a class="btn btn-primary" href="products.html">Explore</a>
+        </div>
       </div>
-    </a>
 
-    <a class="cat-card" href="products.html" aria-label="Casual">
-      <img src="images/casual.jpg" alt="Casual">
-      <div class="cat-grad"></div>
-      <div class="cat-text">
-        <span class="cat-kicker">03</span>
-        <h3>Casual</h3>
-        <span class="cat-cta">Explore</span>
+      <div class="card">
+        <div class="cat-img"><img src="images/casual.jpg" alt="Casual"></div>
+        <div class="card-body">
+          <h3>Casual</h3>
+          <p>Clean basics for daily comfort and simple styling.</p>
+          <a class="btn btn-primary" href="products.html">Explore</a>
+        </div>
       </div>
-    </a>
+    </div>
   </div>
 </section>
 
 <section class="section">
-  <div class="section-head">
-    <h2 class="section-title">EDITORIAL PICKS</h2>
-    <span class="section-muted">Curated looks, minimal words.</span>
-  </div>
+  <div class="container">
+    <h2 class="section-title">Editorial Picks</h2>
+    <p class="section-sub">Quick inspiration for outfits.</p>
 
-  <div class="edit-grid">
-    <figure class="edit-item tall">
-      <img src="images/edit1.jpg" alt="Editorial 1">
-      <figcaption><span class="tag">LOOK 01</span><span class="cap">Clean layering</span></figcaption>
-    </figure>
-
-    <figure class="edit-item">
-      <img src="images/edit2.jpg" alt="Editorial 2">
-      <figcaption><span class="tag">LOOK 02</span><span class="cap">Monochrome</span></figcaption>
-    </figure>
-
-    <figure class="edit-item">
-      <img src="images/edit3.jpg" alt="Editorial 3">
-      <figcaption><span class="tag">LOOK 03</span><span class="cap">Everyday luxe</span></figcaption>
-    </figure>
-
-    <figure class="edit-item wide">
-      <img src="images/edit4.jpg" alt="Editorial 4">
-      <figcaption><span class="tag">LOOK 04</span><span class="cap">Street polish</span></figcaption>
-    </figure>
+    <div class="grid-2">
+      <div class="media"><img src="images/edit1.jpg" alt="Edit 1"></div>
+      <div class="media"><img src="images/edit2.jpg" alt="Edit 2"></div>
+      <div class="media"><img src="images/edit3.jpg" alt="Edit 3"></div>
+      <div class="media"><img src="images/edit4.jpg" alt="Edit 4"></div>
+    </div>
   </div>
 </section>
 
-<section class="campaign">
-  <img src="images/campaign.jpg" alt="Campaign banner">
-  <div class="campaign-copy">
-    <p class="hero-eyebrow">LIMITED CAPSULE</p>
-    <h2 class="campaign-title">NIGHT SHIFT</h2>
-    <p class="campaign-sub">Sharp fits for late-city energy.</p>
-    <a class="btn btn-primary" href="products.html">SHOP CAPSULE</a>
-  </div>
-</section>
-
-<section class="section newsletter">
-  <div class="news-box">
-    <h2 class="section-title">GET THE DROP</h2>
-    <p class="section-muted">New arrivals & limited releases — no spam.</p>
-    <form class="news-form" onsubmit="event.preventDefault(); alert('Subscribed!');">
-      <input type="email" placeholder="Email address" required>
-      <button class="btn btn-primary" type="submit">SUBSCRIBE</button>
-    </form>
+<section class="section">
+  <div class="container">
+    <div class="banner">
+      <div class="media"><img src="images/campaign.jpg" alt="Campaign"></div>
+      <div class="banner-content">
+        <h2>Night Shift</h2>
+        <p>Sharp fits for late-city energy. Focused capsule drop.</p>
+        <a class="btn btn-primary" href="products.html">Shop Capsule</a>
+      </div>
+    </div>
   </div>
 </section>
 
 <footer class="footer">
   <div class="footer-inner">
-    <div class="foot-left">
-      <a class="brand small" href="index.html">STYLE<span>&</span>TREND</a>
-      <p>© 2026 Style & Trend</p>
-    </div>
-    <div class="foot-right">
-      <a href="about.html">About</a>
+    <div>© 2026 Style & Trend</div>
+    <div>
+      <a href="products.html">Shop</a> ·
+      <a href="about.html">About</a> ·
       <a href="contact.html">Contact</a>
-      <a href="products.html">Shop</a>
     </div>
   </div>
 </footer>
