--- a/about.html
+++ b/about.html
@@ -5,150 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | Style & Trend</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="nav">
-  <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
-  <nav class="menu">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html" class="active">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <div class="nav-inner">
+    <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
+    <nav class="menu">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html" class="active">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section class="page-hero">
-  <img class="page-hero-img" src="images/about-hero.png" alt="About hero">
-  <div class="page-hero-overlay"></div>
-  <div class="page-hero-copy">
-    <p class="kicker">ABOUT</p>
-    <h1 class="page-title">A Modern Brand Built on Detail</h1>
-    <p class="page-sub">
-      Style & Trend is a contemporary fashion label based in Istanbul. We blend clean silhouettes
-      with street energy—designed for daily wear, elevated with premium feel, finished with precise details.
-    </p>
-  </div>
-</section>
-
 <section class="section">
-  <div class="split">
+  <div class="container split">
     <div>
-      <h2 class="section-title">Our Story</h2>
-      <p class="text">
+      <h2 class="section-title">About Us</h2>
+      <p class="section-sub">
+        Style & Trend is a contemporary fashion label based in Istanbul. We blend clean silhouettes
+        with street energy—designed for daily wear, elevated with premium feel, finished with precise details.
+      </p>
+
+      <h3 class="section-title" style="font-size:18px;">Our Story</h3>
+      <p>
         Founded in 2026, Style & Trend started with a simple goal: create wardrobe pieces that feel premium,
         look effortless, and stay relevant across seasons. We believe great style is not loud — it’s clean,
         confident, and consistent.
       </p>
-      <p class="text">
+      <p>
         We design essentials that work every day, outerwear that defines the silhouette, and sneakers that finish the look.
         Our collections are intentionally focused: fewer pieces, stronger design decisions, better fit.
       </p>
-      <p class="text">
+      <p>
         We build every drop with a clear direction — fabrics, textures, and shapes that match the brand identity.
         This keeps everything cohesive: you can mix pieces easily and always look “put together”.
       </p>
 
       <div class="stats">
-        <div class="stat"><div class="stat-num">2026</div><div class="stat-label">Founded</div></div>
-        <div class="stat"><div class="stat-num">3</div><div class="stat-label">Core Lines</div></div>
-        <div class="stat"><div class="stat-num">Istanbul</div><div class="stat-label">Design Base</div></div>
-      </div>
-    </div>
-
-    <div class="img-card">
-      <img src="images/about-studio.png" alt="Studio">
-      <div class="img-card-cap">
-        <span class="tag">STUDIO</span>
-        <span class="cap">Minimal space, maximum focus.</span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section soft">
-  <div class="section-head">
-    <h2 class="section-title">What We Stand For</h2>
-    <span class="section-muted">Simple rules that keep the brand sharp.</span>
-  </div>
-
-  <div class="card-grid">
-    <div class="card"><h3>Quality First</h3><p>Better fabric, better stitching, better finishing. Pieces built to last.</p></div>
-    <div class="card"><h3>Clean Design</h3><p>Minimal palettes, strong silhouettes, refined details — timeless > trendy.</p></div>
-    <div class="card"><h3>Comfort + Shape</h3><p>Comfort isn’t optional. We balance structure and movement.</p></div>
-    <div class="card"><h3>Responsible Choices</h3><p>Controlled runs and thoughtful sourcing to reduce waste.</p></div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="section-head">
-    <h2 class="section-title">How We Build a Collection</h2>
-    <span class="section-muted">From concept to your wardrobe.</span>
-  </div>
-
-  <div class="steps">
-    <div class="step"><div class="step-badge">01</div><div><h3>Direction</h3><p>We set mood, color, fabric and silhouette guidelines for a cohesive drop.</p></div></div>
-    <div class="step"><div class="step-badge">02</div><div><h3>Sampling</h3><p>Prototypes, fit tests, seam refinement, and detail tuning until perfect.</p></div></div>
-    <div class="step"><div class="step-badge">03</div><div><h3>Production</h3><p>Consistent finishing and quality checks across controlled runs.</p></div></div>
-    <div class="step"><div class="step-badge">04</div><div><h3>Drop</h3><p>Focused releases — fewer pieces, stronger wardrobe building.</p></div></div>
-  </div>
-</section>
-
-<section class="section soft">
-  <div class="split">
-    <div class="img-card">
-      <img src="images/about-atelier.png" alt="Atelier">
-      <div class="img-card-cap">
-        <span class="tag">ATELIER</span>
-        <span class="cap">Hands-on refinement.</span>
-      </div>
-    </div>
-
-    <div>
-      <h2 class="section-title">Timeline</h2>
-      <div class="timeline">
-        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">2026</div><div class="tl-text">Brand launch — essentials and clean street layers.</div></div></div>
-        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">2027</div><div class="tl-text">Season capsules + improved tailoring and fabric options.</div></div></div>
-        <div class="tl-item"><div class="tl-dot"></div><div class="tl-content"><div class="tl-year">Next</div><div class="tl-text">More refined drops, stronger sustainability, expanded fits.</div></div></div>
+        <div class="stat"><strong>2026</strong><span>Founded</span></div>
+        <div class="stat"><strong>3</strong><span>Core Lines</span></div>
+        <div class="stat"><strong>Istanbul</strong><span>Design Base</span></div>
       </div>
 
-      <div class="mini-cta">
-        <p class="section-muted">Collaboration or press?</p>
-        <a class="btn btn-primary" href="contact.html">CONTACT US</a>
+      <div class="section" style="padding:18px 0;">
+        <h3 class="section-title" style="font-size:18px;">How We Build a Collection</h3>
+        <div class="steps">
+          <div class="step"><strong>01 Direction</strong><span style="color:var(--muted);">We set mood, color, fabric and silhouette guidelines.</span></div>
+          <div class="step"><strong>02 Sampling</strong><span style="color:var(--muted);">Prototypes, fit tests, seam refinement and detail tuning.</span></div>
+          <div class="step"><strong>03 Production</strong><span style="color:var(--muted);">Controlled runs with quality checks and consistent finishing.</span></div>
+          <div class="step"><strong>04 Drop</strong><span style="color:var(--muted);">Focused releases — fewer pieces, stronger wardrobe building.</span></div>
+        </div>
       </div>
-    </div>
-  </div>
-</section>
 
-<section class="section">
-  <div class="section-head">
-    <h2 class="section-title">FAQ</h2>
-    <span class="section-muted">Quick answers.</span>
-  </div>
-
-  <div class="faq">
-    <details><summary>Where are you based?</summary><p>We’re based in Istanbul, Turkey. We design here and work with trusted production partners.</p></details>
-    <details><summary>What style is Style & Trend?</summary><p>Modern minimalism with street influence: clean silhouettes, wearable layers, premium feel.</p></details>
-    <details><summary>Do you do limited drops?</summary><p>Yes. We prefer focused releases rather than massive collections.</p></details>
-  </div>
-</section>
-
-<footer class="footer">
-  <div class="footer-inner">
-    <div class="foot-left">
-      <a class="brand small" href="index.html">STYLE<span>&</span>TREND</a>
-      <p>© 2026 Style & Trend</p>
-    </div>
-    <div class="foot-right">
-      <a href="products.html">Shop</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </div>
-  </div>
-</footer>
-
-</body>
-</html>
+      <h3 clas
