--- a/about.html
+++ b/about.html
@@ -60,4 +60,48 @@
         </div>
       </div>
 
-      <h3 clas
+      <h3 class="section-title" style="font-size:18px;">FAQ</h3>
+      <div class="faq">
+        <details>
+          <summary>Where are you based?</summary>
+          <p>We’re based in Istanbul, Turkey. We design here and work with trusted production partners.</p>
+        </details>
+        <details>
+          <summary>What style is Style & Trend?</summary>
+          <p>Modern minimalism with street influence: clean silhouettes, wearable layers, premium feel.</p>
+        </details>
+        <details>
+          <summary>Do you do limited drops?</summary>
+          <p>Yes. We prefer focused releases rather than massive collections.</p>
+        </details>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="cat-img" style="height:260px;"><img src="images/about-hero.png" alt="About image"></div>
+      <div class="card-body">
+        <h3>Studio Mood</h3>
+        <p>Minimal workspace, clean direction, and detail-focused design choices.</p>
+      </div>
+
+      <div class="cat-img" style="height:260px;"><img src="images/about-atelier.png" alt="Atelier image"></div>
+      <div class="card-body">
+        <h3>Atelier</h3>
+        <p>Hands-on refinement and finishing touches for quality consistency.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="footer">
+  <div class="footer-inner">
+    <div>© 2026 Style & Trend</div>
+    <div>
+      <a href="products.html">Shop</a> ·
+      <a href="contact.html">Contact</a>
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
