--- a/contact.html
+++ b/contact.html
@@ -5,126 +5,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | Style & Trend</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="nav">
-  <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
-  <nav class="menu">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html" class="active">Contact</a>
-  </nav>
+  <div class="nav-inner">
+    <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
+    <nav class="menu">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section class="page-hero compact">
-  <img class="page-hero-img" src="images/contact-hero.png" alt="Contact hero">
-  <div class="page-hero-overlay light"></div>
-  <div class="page-hero-copy dark">
-    <p class="kicker">CONTACT</p>
-    <h1 class="page-title">Let’s Talk</h1>
-    <p class="page-sub">Questions about sizing, shipping, collaborations, or press? Send a message.</p>
-  </div>
-</section>
-
 <section class="section">
-  <div class="contact-grid">
-    <div class="card">
-      <h3>Customer Support</h3>
-      <p class="muted">Email</p>
-      <p><strong>support@styletrend.com</strong></p>
-      <p class="muted">Response time: 24–48 hours</p>
-    </div>
-    <div class="card">
-      <h3>Phone</h3>
-      <p class="muted">Turkey</p>
-      <p><strong>+90 532 847 29 61</strong></p>
-      <p class="muted">Mon–Fri · 10:00–18:00</p>
-    </div>
-    <div class="card">
-      <h3>Business</h3>
-      <p class="muted">Press / Wholesale</p>
-      <p><strong>biz@styletrend.com</strong></p>
-      <p class="muted">We review weekly</p>
-    </div>
-  </div>
-</section>
+  <div class="container">
+    <h2 class="section-title">Contact</h2>
+    <p class="section-sub">Questions about sizing, shipping, collaborations or press? Send a message.</p>
 
-<section class="section soft">
-  <div class="split">
-    <div class="card form-card">
-      <h2 class="section-title">Send a Message</h2>
-      <p class="section-muted">We’ll reply as soon as possible.</p>
+    <div class="grid-3">
+      <div class="card">
+        <div class="card-body">
+          <h3>Customer Support</h3>
+          <p><strong>support@styletrend.com</strong></p>
+          <p>Response time: 24–48 hours</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h3>Phone</h3>
+          <p><strong>+90 532 847 29 61</strong></p>
+          <p>Mon–Fri · 10:00–18:00</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <h3>Business</h3>
+          <p><strong>biz@styletrend.com</strong></p>
+          <p>Press / Wholesale / Collaboration</p>
+        </div>
+      </div>
+    </div>
 
-      <form class="form" onsubmit="event.preventDefault(); alert('Message sent!');">
-        <div class="row">
-          <label>
-            <span>Name</span>
-            <input type="text" placeholder="Your name" required>
-          </label>
-          <label>
-            <span>Email</span>
-            <input type="email" placeholder="you@email.com" required>
-          </label>
+    <div class="section" style="padding:18px 0;">
+      <div class="split">
+        <div class="card">
+          <div class="card-body">
+            <h3>Send a Message</h3>
+            <form class="form" onsubmit="event.preventDefault(); alert('Message sent!');">
+              <label>Name
+                <input type="text" placeholder="Your name" required>
+              </label>
+              <label>Email
+                <input type="email" placeholder="you@email.com" required>
+              </label>
+              <label>Subject
+                <input type="text" placeholder="Shipping / sizing / collaboration...">
+              </label>
+              <label>Message
+                <textarea rows="6" placeholder="Write your message..." required></textarea>
+              </label>
+              <button class="btn btn-primary" type="submit">Send</button>
+            </form>
+          </div>
         </div>
 
-        <label>
-          <span>Subject</span>
-          <input type="text" placeholder="Shipping / sizing / collaboration...">
-        </label>
-
-        <label>
-          <span>Message</span>
-          <textarea placeholder="Write your message..." rows="6" required></textarea>
-        </label>
-
-        <button class="btn btn-primary" type="submit">SEND</button>
-      </form>
-    </div>
-
-    <div class="map-card">
-      <div class="map-head">
-        <h3>Our Base</h3>
-        <p class="section-muted">Tuzla · Istanbul</p>
+        <div>
+          <h3 class="section-title" style="font-size:18px;">Location</h3>
+          <p class="section-sub">Tuzla · Istanbul</p>
+          <iframe class="map"
+            src="https://www.google.com/maps?q=Tuzla%20Istanbul&output=embed"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Map">
+          </iframe>
+        </div>
       </div>
-      <iframe
-        class="map"
-        src="https://www.google.com/maps?q=Tuzla%20Istanbul&output=embed"
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        title="Map">
-      </iframe>
     </div>
-  </div>
-</section>
 
-<section class="section">
-  <div class="section-head">
-    <h2 class="section-title">Contact FAQ</h2>
-    <span class="section-muted">Before you send, maybe this helps.</span>
-  </div>
+    <h3 class="section-title" style="font-size:18px;">FAQ</h3>
+    <div class="faq">
+      <details>
+        <summary>Do you ship internationally?</summary>
+        <p>Yes. Add items to cart and proceed to checkout to see available destinations.</p>
+      </details>
+      <details>
+        <summary>How do I choose the right size?</summary>
+        <p>Send your height/weight and preferred fit (regular/oversized). We’ll guide you.</p>
+      </details>
+      <details>
+        <summary>Collaboration requests?</summary>
+        <p>Send links + audience + concept. We review weekly.</p>
+      </details>
+    </div>
 
-  <div class="faq">
-    <details><summary>Do you ship internationally?</summary><p>Yes. Add items to cart and proceed to checkout to see available destinations.</p></details>
-    <details><summary>How do I choose the right size?</summary><p>Message us with your height/weight and preferred fit (regular/oversized). We’ll guide you.</p></details>
-    <details><summary>Collaboration / influencer requests?</summary><p>Send links + audience + concept. We review weekly.</p></details>
   </div>
 </section>
 
 <footer class="footer">
   <div class="footer-inner">
-    <div class="foot-left">
-      <a class="brand small" href="index.html">STYLE<span>&</span>TREND</a>
-      <p>© 2026 Style & Trend</p>
-    </div>
-    <div class="foot-right">
-      <a href="products.html">Shop</a>
+    <div>© 2026 Style & Trend</div>
+    <div>
+      <a href="index.html">Home</a> ·
+      <a href="products.html">Products</a> ·
       <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
     </div>
   </div>
 </footer>
