--- a/products.html
+++ b/products.html
@@ -16,6 +16,10 @@
       <a href="products.html" class="active">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
+
+      <a href="cart.html">
+        Cart <span id="cartCount" class="cart-badge">0</span>
+      </a>
     </nav>
   </div>
 </header>
@@ -70,13 +74,49 @@
   </div>
 </footer>
 
+<!-- Toast -->
+<div id="toast" class="toast">
+  <div class="dot"></div>
+  <div>
+    <strong id="toastTitle">Added to cart</strong>
+    <small id="toastText">Item added successfully.</small>
+  </div>
+</div>
+
 <script>
-  function addToCart(name, price) {
-    const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-    cart.push({ name, price });
-    localStorage.setItem("cart", JSON.stringify(cart));
-    alert(name + " added to cart!");
+  function getCart() {
+    return JSON.parse(localStorage.getItem("cart") || "[]");
   }
+
+  function setCart(cart) {
+    localStorage.setItem("cart", JSON.stringify(cart));
+  }
+
+  function updateCartCount() {
+    const el = document.getElementById("cartCount");
+    if (!el) return;
+    el.textContent = getCart().length;
+  }
+
+  function showToast(title, text) {
+    const toast = document.getElementById("toast");
+    if (!toast) return;
+    document.getElementById("toastTitle").textContent = title;
+    document.getElementById("toastText").textContent = text;
+    toast.classList.add("show");
+    clearTimeout(window.__toastTimer);
+    window.__toastTimer = setTimeout(() => toast.classList.remove("show"), 2200);
+  }
+
+  function addToCart(name, price) {
+    const cart = getCart();
+    cart.push({ name, price });
+    setCart(cart);
+    updateCartCount();
+    showToast("Added to cart", name + " has been added.");
+  }
+
+  window.addEventListener("load", updateCartCount);
 </script>
 
 </body>
